Deployment/dev/k8sClusterDepAWSKOPS/modules/efk/ingress_ecs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: efk
  name: efk-ecs-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: 'ecs.hn.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master
                port:
                  number: 9200                             

# http://ecs.hn.com/_cluster/health
# http://ecs.hn.com/_cat/indices
# http://ecs.hn.com/_cat/indices?h=index
# http://ecs.hn.com/_aliases?pretty=true

# http://ecs.hn.com/fluentd/_search?pretty=true&q=*:*
