Deployment/dev/k8sClusterDepAWSKOPS/modules/efk/ingress_kib.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: efk
  name: efk-kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: 'kib.hn.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601                             

# /hn-ms1               -->  /
# /hn-ms1/muf           -->  /muf
